--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,25 +1,25 @@
 /* fonts:
 
 font-family: 'Open Sans', sans-serif;
-font-family: 'Slabo 27px', serif;
+font-family: 'Heebo', sans-serif;
 
 colors:
 
 */
 
-/* rgba(116, 143, 130, 1); /* dark grey-green */
+/* rgba(0,0,0,1); 
 
-/* rgba(207, 173, 207, 1); /* light pink */
+/* rgba(255, 255, 255, 1); */ 
 
 
 body {
-	font: 1.5em/1.3 'Open Sans', sans-serif;
+	font-family: 'Righteous', cursive;
 	background: white;
-	color: rgba(116, 143, 130, 1); /* dark grey-green */
+	color: rgba(0, 0, 0, 1); 
 }
 
 h1, h2, h3, h4 {
-	font-family: 'Slabo 27px', serif;
+	font-family: 'Heebo', sans-serif;
 	line-height: 1;
 	margin: 0;
 }
@@ -35,7 +35,7 @@ p {
 	color: #444;
 }
 a {
-	color: rgba(116, 143, 130, 1); /* dark grey-green */
+	color: rgba(0,0,0,1); 
 }
 a:hover, a:focus {
 	color: #444;
@@ -43,8 +43,8 @@ a:hover, a:focus {
 }
 
 .container-title, .row-result-title, .row-saved-title {
-	background: rgba(116, 143, 130, 1); /* dark grey-green */
-	color: rgba(207, 173, 207, 1); /* light pink */
+	background: rgba(0,0,0,1); 
+	color: rgba(255, 255, 255, 1); 
 	padding: 3em;
 }
 .container-title .row, .container-title .col {
@@ -52,7 +52,7 @@ a:hover, a:focus {
 	margin: 0;
 }
 label {
-	font-family: 'Slabo 27px', serif;
+	font-family: 'Heebo', sans-serif;
 }
 input {
 	padding: 0.25em;
@@ -61,12 +61,12 @@ input {
 }
 
 .btn-this {
-	font-family: 'Slabo 27px', serif;
-	background: rgba(116, 143, 130, 1); /* dark grey-green */
+	font-family: 'Heebo', sans-serif;
+	background: rgba(0,0,0,1); 
 	color: white;
 }
 .btn-this:hover {
-	color: rgba(207, 173, 207, 1); /* light pink */
+	color: rgba(255, 255, 255, 1); 
 }
 
 .row-search-title {
@@ -79,9 +79,10 @@ input {
 	margin: 0;
 }
 .col-result-body {
-	margin: 0.25em;
-	padding: 0.5em;
-	width: calc(25% - 0.5em);
+	position: relative;
+	margin: auto;
+	padding: auto;
+	width: 50;
 }
 @media screen and (max-width: 800px) and (min-width: 700px) {
 	.col-result-body {
@@ -94,7 +95,7 @@ input {
 	}
 }
 .col-result-body:hover {
-	background: rgba(207, 173, 207, 1); /* light pink */
+	background: rgba(255, 255, 255, 1); 
 }
 .btn-save {
 	text-align: center;
